include/next_token.cpp
/* Generated by re2c 0.13.5 on Fri Jun 12 16:12:21 2015 */
////////////////////////////////////////////////////////////////////////////////
// next_token.re2c
// Input for re2c to generate the Tokenizer::next_token() function
// Use "re2c -is next_token.re2c > next_token.cpp" to generate the C++ code
// TH, Sept. 2014
// TODO: Email/Web-Addresses
// TODO: Better date expressions
// TODO: commas in numbers
////////////////////////////////////////////////////////////////////////////////

Tokenizer::Token Tokenizer::next_token2()
{  
next_token_start:

  #define YYFILL(n)
  // Remark: YYCTYPE= "unsigned char" is very important to handle 8-bit ASCII correctly
  // YYCURSOR, YYLIMIT YYMARKER are the instance variables which re2c uses for tokenisation
  
  

  // Store token start
  token_begin = cursor;

  if (cursor >= limit) {
    // cursor reached the end of the line
    ++current_global_offs;
    return t_return(ttEOS);
  }
  
  // Important: 
  // - Order patterns by importance
  // - Provide a catch-all pattern at the end, otherwise the return value is undefined
    
  
{
	unsigned char yych;
	unsigned int yyaccept = 0;

	if ((limit - cursor) < 33) YYFILL(33);
	yych = (unsigned char)*cursor;
	switch (yych) {
	case 0x00:
	case 0x01:
	case 0x02:
	case 0x03:
	case 0x04:
	case 0x05:
	case 0x06:
	case 0x07:
	case 0x08:
	case '\n':
	case '\v':
	case '\f':
	case 0x0E:
	case 0x0F:
	case 0x10:
	case 0x11:
	case 0x12:
	case 0x13:
	case 0x14:
	case 0x15:
	case 0x16:
	case 0x17:
	case 0x18:
	case 0x19:
	case 0x1A:
	case 0x1B:
	case 0x1C:
	case 0x1D:
	case 0x1E:
	case 0x1F:
	case '#':
	case '$':
	case '%':
	case '*':
	case '=':
	case '@':
	case '|':
	case '~':
	case 0x7F:
	case 0x80:
	case 0x81:
	case 0x82:
	case 0x83:
	case 0x84:
	case 0x86:
	case 0x87:
	case 0x88:
	case 0x89:
	case 0x8B:
	case 0x8C:
	case 0x8D:
	case 0x8E:
	case 0x8F:
	case 0x90:
	case 0x95:
	case 0x98:
	case 0x99:
	case 0x9B:
	case 0x9C:
	case 0x9D:
	case 0x9F:
	case 0xA1:
	case 0xA2:
	case 0xA3:
	case 0xA4:
	case 0xA5:
	case 0xA6:
	case 0xA7:
	case 0xA8:
	case 0xA9:
	case 0xAA:
	case 0xAB:
	case 0xAC:
	case 0xAD:
	case 0xAE:
	case 0xAF:
	case 0xB0:
	case 0xB1:
	case 0xB2:
	case 0xB3:
	case 0xB4:
	case 0xB5:
	case 0xB6:
	case 0xB7:
	case 0xB8:
	case 0xB9:
	case 0xBA:
	case 0xBB:
	case 0xBC:
	case 0xBD:
	case 0xBE:
	case 0xBF:
	case 0xD7:
	case 0xD8:
	case 0xDD:
	case 0xDE:
	case 0xDF:
	case 0xF0:
	case 0xF7:
	case 0xF8:
	case 0xFE:	goto yy70;
	case '\t':
	case '\r':
	case ' ':
	case 0xA0:	goto yy68;
	case '!':
	case ',':
	case '/':
	case ':':
	case ';':
	case '?':	goto yy67;
	case '"':
	case 0x91:
	case 0x93:	goto yy60;
	case '&':	goto yy4;
	case '\'':	goto yy53;
	case '(':
	case '{':	goto yy58;
	case ')':
	case '>':
	case '}':	goto yy59;
	case '+':	goto yy57;
	case '-':	goto yy47;
	case '.':	goto yy64;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy8;
	case '<':	goto yy2;
	case 'A':	goto yy10;
	case 'B':
	case 'E':
	case 'K':
	case 'Q':
	case 'R':
	case 'X':
	case 'Z':	goto yy11;
	case 'C':	goto yy12;
	case 'D':	goto yy13;
	case 'F':	goto yy14;
	case 'G':	goto yy15;
	case 'H':	goto yy16;
	case 'I':	goto yy17;
	case 'J':	goto yy18;
	case 'L':	goto yy19;
	case 'M':	goto yy20;
	case 'N':	goto yy21;
	case 'O':	goto yy22;
	case 'P':	goto yy23;
	case 'S':	goto yy24;
	case 'T':	goto yy25;
	case 'U':	goto yy26;
	case 'V':	goto yy27;
	case 'W':	goto yy28;
	case 'Y':	goto yy29;
	case '[':	goto yy49;
	case '\\':
	case '^':
	case '_':
	case '`':	goto yy50;
	case ']':	goto yy51;
	case 'a':	goto yy30;
	case 'b':
	case 'g':
	case 'j':
	case 'k':
	case 'q':
	case 'r':
	case 'u':
	case 'v':
	case 'x':
	case 'z':	goto yy31;
	case 'c':	goto yy32;
	case 'd':	goto yy33;
	case 'e':	goto yy34;
	case 'f':	goto yy35;
	case 'h':	goto yy6;
	case 'i':	goto yy36;
	case 'l':	goto yy37;
	case 'm':	goto yy38;
	case 'n':	goto yy39;
	case 'o':	goto yy40;
	case 'p':	goto yy41;
	case 's':	goto yy42;
	case 't':	goto yy43;
	case 'w':	goto yy44;
	case 'y':	goto yy45;
	case 0x85:	goto yy62;
	case 0x92:	goto yy55;
	case 0x94:	goto yy61;
	case 0x96:
	case 0x97:	goto yy66;
	default:	goto yy46;
	}
yy2:
	yyaccept = 0;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 'a') {
		if (yych == '/') goto yy533;
	} else {
		if (yych <= 'b') goto yy532;
		if (yych == 'n') goto yy534;
	}
yy3:
	{ return t_return(ttLeftBracket); }
yy4:
	yyaccept = 1;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= '`') goto yy5;
	if (yych <= 'z') goto yy528;
yy5:
	{ return t_return(ttRest); }
yy6:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 0x9A) {
		if (yych <= 'e') {
			if (yych <= '`') {
				if (yych <= '@') goto yy226;
				if (yych <= 'Z') goto yy227;
				goto yy226;
			} else {
				if (yych <= 'a') goto yy505;
				if (yych <= 'd') goto yy227;
				goto yy506;
			}
		} else {
			if (yych <= 'z') {
				if (yych == 't') goto yy507;
				goto yy227;
			} else {
				if (yych == 0x8A) goto yy162;
				if (yych <= 0x99) goto yy226;
				goto yy162;
			}
		}
	} else {
		if (yych <= 0xDF) {
			if (yych <= 0xBF) {
				if (yych == 0x9E) goto yy162;
				goto yy226;
			} else {
				if (yych <= 0xD6) goto yy162;
				if (yych <= 0xD8) goto yy226;
				if (yych <= 0xDC) goto yy162;
				goto yy226;
			}
		} else {
			if (yych <= 0xF6) {
				if (yych == 0xF0) goto yy226;
				goto yy162;
			} else {
				if (yych <= 0xF8) goto yy226;
				if (yych == 0xFE) goto yy226;
				goto yy162;
			}
		}
	}
yy7:
	{ return t_return(ttWord); }
yy8:
	yyaccept = 3;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych == '.') goto yy151;
	goto yy482;
yy9:
	{ return t_return(ttNumber); }
yy10:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 0x99) {
		if (yych <= 'i') {
			if (yych <= '@') {
				if (yych == '.') goto yy406;
				goto yy226;
			} else {
				if (yych <= 'Z') goto yy227;
				if (yych <= '`') goto yy226;
				if (yych <= 'h') goto yy227;
				goto yy335;
			}
		} else {
			if (yych <= 'u') {
				if (yych == 'r') goto yy401;
				if (yych <= 't') goto yy227;
				goto yy479;
			} else {
				if (yych <= 'z') goto yy227;
				if (yych == 0x8A) goto yy162;
				goto yy226;
			}
		}
	} else {
		if (yych <= 0xDC) {
			if (yych <= 0x9E) {
				if (yych <= 0x9A) goto yy162;
				if (yych <= 0x9D) goto yy226;
				goto yy162;
			} else {
				if (yych <= 0xBF) goto yy226;
				if (yych <= 0xD6) goto yy162;
				if (yych <= 0xD8) goto yy226;
				goto yy162;
			}
		} else {
			if (yych <= 0xF6) {
				if (yych <= 0xDF) goto yy226;
				if (yych == 0xF0) goto yy226;
				goto yy162;
			} else {
				if (yych <= 0xF8) goto yy226;
				if (yych == 0xFE) goto yy226;
				goto yy162;
			}
		}
	}
yy11:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 0x9E) {
		if (yych <= 'z') {
			if (yych <= '@') {
				if (yych == '.') goto yy406;
				goto yy226;
			} else {
				if (yych <= 'Z') goto yy227;
				if (yych <= '`') goto yy226;
				goto yy227;
			}
		} else {
			if (yych <= 0x99) {
				if (yych == 0x8A) goto yy162;
				goto yy226;
			} else {
				if (yych <= 0x9A) goto yy162;
				if (yych <= 0x9D) goto yy226;
				goto yy162;
			}
		}
	} else {
		if (yych <= 0xEF) {
			if (yych <= 0xD8) {
				if (yych <= 0xBF) goto yy226;
				if (yych <= 0xD6) goto yy162;
				goto yy226;
			} else {
				if (yych <= 0xDC) goto yy162;
				if (yych <= 0xDF) goto yy226;
				goto yy162;
			}
		} else {
			if (yych <= 0xF8) {
				if (yych <= 0xF0) goto yy226;
				if (yych <= 0xF6) goto yy162;
				goto yy226;
			} else {
				if (yych == 0xFE) goto yy226;
				goto yy162;
			}
		}
	}
yy12:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 0x9A) {
		if (yych <= 'a') {
			if (yych <= '@') {
				if (yych == '.') goto yy406;
				goto yy226;
			} else {
				if (yych <= 'Z') goto yy227;
				if (yych <= '`') goto yy226;
				goto yy472;
			}
		} else {
			if (yych <= 'z') {
				if (yych == 'o') goto yy398;
				goto yy227;
			} else {
				if (yych == 0x8A) goto yy162;
				if (yych <= 0x99) goto yy226;
				goto yy162;
			}
		}
	} else {
		if (yych <= 0xDF) {
			if (yych <= 0xBF) {
				if (yych == 0x9E) goto yy162;
				goto yy226;
			} else {
				if (yych <= 0xD6) goto yy162;
				if (yych <= 0xD8) goto yy226;
				if (yych <= 0xDC) goto yy162;
				goto yy226;
			}
		} else {
			if (yych <= 0xF6) {
				if (yych == 0xF0) goto yy226;
				goto yy162;
			} else {
				if (yych <= 0xF8) goto yy226;
				if (yych == 0xFE) goto yy226;
				goto yy162;
			}
		}
	}
yy13:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 0x8A) {
		if (yych <= 'h') {
			if (yych <= 'Z') {
				if (yych == '.') goto yy406;
				if (yych <= '@') goto yy226;
				goto yy227;
			} else {
				if (yych <= '`') goto yy226;
				if (yych == 'e') goto yy469;
				goto yy227;
			}
		} else {
			if (yych <= 'q') {
				if (yych <= 'i') goto yy395;
				if (yych == 'o') goto yy396;
				goto yy227;
			} else {
				if (yych <= 'r') goto yy470;
				if (yych <= 'z') goto yy227;
				if (yych <= 0x89) goto yy226;
				goto yy162;
			}
		}
	} else {
		if (yych <= 0xDC) {
			if (yych <= 0x9E) {
				if (yych == 0x9A) goto yy162;
				if (yych <= 0x9D) goto yy226;
				goto yy162;
			} else {
				if (yych <= 0xBF) goto yy226;
				if (yych <= 0xD6) goto yy162;
				if (yych <= 0xD8) goto yy226;
				goto yy162;
			}
		} else {
			if (yych <= 0xF6) {
				if (yych <= 0xDF) goto yy226;
				if (yych == 0xF0) goto yy226;
				goto yy162;
			} else {
				if (yych <= 0xF8) goto yy226;
				if (yych == 0xFE) goto yy226;
				goto yy162;
			}
		}
	}
yy14:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 0x9D) {
		if (yych <= 'd') {
			if (yych <= '@') {
				if (yych == '.') goto yy406;
				goto yy226;
			} else {
				if (yych <= 'Z') goto yy227;
				if (yych <= '`') goto yy226;
				goto yy227;
			}
		} else {
			if (yych <= 0x89) {
				if (yych <= 'e') goto yy467;
				if (yych <= 'z') goto yy227;
				goto yy226;
			} else {
				if (yych <= 0x8A) goto yy162;
				if (yych == 0x9A) goto yy162;
				goto yy226;
			}
		}
	} else {
		if (yych <= 0xDF) {
			if (yych <= 0xD6) {
				if (yych <= 0x9E) goto yy162;
				if (yych <= 0xBF) goto yy226;
				goto yy162;
			} else {
				if (yych <= 0xD8) goto yy226;
				if (yych <= 0xDC) goto yy162;
				goto yy226;
			}
		} else {
			if (yych <= 0xF6) {
				if (yych == 0xF0) goto yy226;
				goto yy162;
			} else {
				if (yych <= 0xF8) goto yy226;
				if (yych == 0xFE) goto yy226;
				goto yy162;
			}
		}
	}
yy15:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 0x9D) {
		if (yych <= 'n') {
			if (yych <= '@') {
				if (yych == '.') goto yy406;
				goto yy226;
			} else {
				if (yych <= 'Z') goto yy227;
				if (yych <= '`') goto yy226;
				goto yy227;
			}
		} else {
			if (yych <= 0x89) {
				if (yych <= 'o') goto yy465;
				if (yych <= 'z') goto yy227;
				goto yy226;
			} else {
				if (yych <= 0x8A) goto yy162;
				if (yych == 0x9A) goto yy162;
				goto yy226;
			}
		}
	} else {
		if (yych <= 0xDF) {
			if (yych <= 0xD6) {
				if (yych <= 0x9E) goto yy162;
				if (yych <= 0xBF) goto yy226;
				goto yy162;
			} else {
				if (yych <= 0xD8) goto yy226;
				if (yych <= 0xDC) goto yy162;
				goto yy226;
			}
		} else {
			if (yych <= 0xF6) {
				if (yych == 0xF0) goto yy226;
				goto yy162;
			} else {
				if (yych <= 0xF8) goto yy226;
				if (yych == 0xFE) goto yy226;
				goto yy162;
			}
		}
	}
yy16:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 0x9A) {
		if (yych <= 'a') {
			if (yych <= '@') {
				if (yych == '.') goto yy406;
				goto yy226;
			} else {
				if (yych <= 'Z') goto yy227;
				if (yych <= '`') goto yy226;
				goto yy459;
			}
		} else {
			if (yych <= 'z') {
				if (yych == 'e') goto yy460;
				goto yy227;
			} else {
				if (yych == 0x8A) goto yy162;
				if (yych <= 0x99) goto yy226;
				goto yy162;
			}
		}
	} else {
		if (yych <= 0xDF) {
			if (yych <= 0xBF) {
				if (yych == 0x9E) goto yy162;
				goto yy226;
			} else {
				if (yych <= 0xD6) goto yy162;
				if (yych <= 0xD8) goto yy226;
				if (yych <= 0xDC) goto yy162;
				goto yy226;
			}
		} else {
			if (yych <= 0xF6) {
				if (yych == 0xF0) goto yy226;
				goto yy162;
			} else {
				if (yych <= 0xF8) goto yy226;
				if (yych == 0xFE) goto yy226;
				goto yy162;
			}
		}
	}
yy17:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 0x91) {
		if (yych <= 'Z') {
			if (yych <= '.') {
				if (yych == '\'') goto yy458;
				if (yych <= '-') goto yy226;
				goto yy406;
			} else {
				if (yych <= '@') goto yy226;
				if (yych == 'N') goto yy457;
				goto yy227;
			}
		} else {
			if (yych <= 't') {
				if (yych <= '`') goto yy226;
				if (yych <= 'r') goto yy227;
				if (yych <= 's') goto yy335;
				goto yy382;
			} else {
				if (yych <= 'z') goto yy227;
				if (yych == 0x8A) goto yy162;
				goto yy226;
			}
		}
	} else {
		if (yych <= 0xD8) {
			if (yych <= 0x9D) {
				if (yych <= 0x92) goto yy458;
				if (yych == 0x9A) goto yy162;
				goto yy226;
			} else {
				if (yych <= 0x9E) goto yy162;
				if (yych <= 0xBF) goto yy226;
				if (yych <= 0xD6) goto yy162;
				goto yy226;
			}
		} else {
			if (yych <= 0xF0) {
				if (yych <= 0xDC) goto yy162;
				if (yych <= 0xDF) goto yy226;
				if (yych <= 0xEF) goto yy162;
				goto yy226;
			} else {
				if (yych <= 0xF8) {
					if (yych <= 0xF6) goto yy162;
					goto yy226;
				} else {
					if (yych == 0xFE) goto yy226;
					goto yy162;
				}
			}
		}
	}
yy18:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 0x9D) {
		if (yych <= 'a') {
			if (yych <= '@') {
				if (yych == '.') goto yy406;
				goto yy226;
			} else {
				if (yych <= 'Z') goto yy227;
				if (yych <= '`') goto yy226;
				goto yy455;
			}
		} else {
			if (yych <= 0x8A) {
				if (yych <= 'z') goto yy227;
				if (yych <= 0x89) goto yy226;
				goto yy162;
			} else {
				if (yych == 0x9A) goto yy162;
				goto yy226;
			}
		}
	} else {
		if (yych <= 0xDF) {
			if (yych <= 0xD6) {
				if (yych <= 0x9E) goto yy162;
				if (yych <= 0xBF) goto yy226;
				goto yy162;
			} else {
				if (yych <= 0xD8) goto yy226;
				if (yych <= 0xDC) goto yy162;
				goto yy226;
			}
		} else {
			if (yych <= 0xF6) {
				if (yych == 0xF0) goto yy226;
				goto yy162;
			} else {
				if (yych <= 0xF8) goto yy226;
				if (yych == 0xFE) goto yy226;
				goto yy162;
			}
		}
	}
yy19:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 0x9D) {
		if (yych <= 'd') {
			if (yych <= '@') {
				if (yych == '.') goto yy406;
				goto yy226;
			} else {
				if (yych <= 'Z') goto yy227;
				if (yych <= '`') goto yy226;
				goto yy227;
			}
		} else {
			if (yych <= 0x89) {
				if (yych <= 'e') goto yy381;
				if (yych <= 'z') goto yy227;
				goto yy226;
			} else {
				if (yych <= 0x8A) goto yy162;
				if (yych == 0x9A) goto yy162;
				goto yy226;
			}
		}
	} else {
		if (yych <= 0xDF) {
			if (yych <= 0xD6) {
				if (yych <= 0x9E) goto yy162;
				if (yych <= 0xBF) goto yy226;
				goto yy162;
			} else {
				if (yych <= 0xD8) goto yy226;
				if (yych <= 0xDC) goto yy162;
				goto yy226;
			}
		} else {
			if (yych <= 0xF6) {
				if (yych == 0xF0) goto yy226;
				goto yy162;
			} else {
				if (yych <= 0xF8) goto yy226;
				if (yych == 0xFE) goto yy226;
				goto yy162;
			}
		}
	}
yy20:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 0x8A) {
		if (yych <= 'i') {
			if (yych <= 'Z') {
				if (yych == '.') goto yy406;
				if (yych <= '@') goto yy226;
				goto yy227;
			} else {
				if (yych <= '`') goto yy226;
				if (yych <= 'a') goto yy448;
				if (yych <= 'h') goto yy227;
				goto yy449;
			}
		} else {
			if (yych <= 't') {
				if (yych <= 'q') goto yy227;
				if (yych <= 'r') goto yy450;
				if (yych <= 's') goto yy451;
				goto yy227;
			} else {
				if (yych <= 'u') goto yy368;
				if (yych <= 'z') goto yy227;
				if (yych <= 0x89) goto yy226;
				goto yy162;
			}
		}
	} else {
		if (yych <= 0xDC) {
			if (yych <= 0x9E) {
				if (yych == 0x9A) goto yy162;
				if (yych <= 0x9D) goto yy226;
				goto yy162;
			} else {
				if (yych <= 0xBF) goto yy226;
				if (yych <= 0xD6) goto yy162;
				if (yych <= 0xD8) goto yy226;
				goto yy162;
			}
		} else {
			if (yych <= 0xF6) {
				if (yych <= 0xDF) goto yy226;
				if (yych == 0xF0) goto yy226;
				goto yy162;
			} else {
				if (yych <= 0xF8) goto yy226;
				if (yych == 0xFE) goto yy226;
				goto yy162;
			}
		}
	}
yy21:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 0x9A) {
		if (yych <= 'e') {
			if (yych <= '@') {
				if (yych == '.') goto yy441;
				goto yy226;
			} else {
				if (yych <= 'Z') goto yy227;
				if (yych <= '`') goto yy226;
				if (yych <= 'd') goto yy227;
				goto yy364;
			}
		} else {
			if (yych <= 'z') {
				if (yych == 'o') goto yy440;
				goto yy227;
			} else {
				if (yych == 0x8A) goto yy162;
				if (yych <= 0x99) goto yy226;
				goto yy162;
			}
		}
	} else {
		if (yych <= 0xDF) {
			if (yych <= 0xBF) {
				if (yych == 0x9E) goto yy162;
				goto yy226;
			} else {
				if (yych <= 0xD6) goto yy162;
				if (yych <= 0xD8) goto yy226;
				if (yych <= 0xDC) goto yy162;
				goto yy226;
			}
		} else {
			if (yych <= 0xF6) {
				if (yych == 0xF0) goto yy226;
				goto yy162;
			} else {
				if (yych <= 0xF8) goto yy226;
				if (yych == 0xFE) goto yy226;
				goto yy162;
			}
		}
	}
yy22:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 0x9D) {
		if (yych <= 'b') {
			if (yych <= '@') {
				if (yych == '.') goto yy406;
				goto yy226;
			} else {
				if (yych <= 'Z') goto yy227;
				if (yych <= '`') goto yy226;
				goto yy227;
			}
		} else {
			if (yych <= 0x89) {
				if (yych <= 'c') goto yy438;
				if (yych <= 'z') goto yy227;
				goto yy226;
			} else {
				if (yych <= 0x8A) goto yy162;
				if (yych == 0x9A) goto yy162;
				goto yy226;
			}
		}
	} else {
		if (yych <= 0xDF) {
			if (yych <= 0xD6) {
				if (yych <= 0x9E) goto yy162;
				if (yych <= 0xBF) goto yy226;
				goto yy162;
			} else {
				if (yych <= 0xD8) goto yy226;
				if (yych <= 0xDC) goto yy162;
				goto yy226;
			}
		} else {
			if (yych <= 0xF6) {
				if (yych == 0xF0) goto yy226;
				goto yy162;
			} else {
				if (yych <= 0xF8) goto yy226;
				if (yych == 0xFE) goto yy226;
				goto yy162;
			}
		}
	}
yy23:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 0x9A) {
		if (yych <= 'h') {
			if (yych <= '@') {
				if (yych == '.') goto yy406;
				goto yy226;
			} else {
				if (yych <= 'Z') goto yy227;
				if (yych <= '`') goto yy226;
				if (yych <= 'g') goto yy227;
				goto yy432;
			}
		} else {
			if (yych <= 'z') {
				if (yych == 'r') goto yy433;
				goto yy227;
			} else {
				if (yych == 0x8A) goto yy162;
				if (yych <= 0x99) goto yy226;
				goto yy162;
			}
		}
	} else {
		if (yych <= 0xDF) {
